--- a/style.css
+++ b/style.css
@@ -111,7 +111,16 @@ input[type="text"]{
     border-radius: 7px;
     appearance: none;
     outline: none;
+    border-style: solid;
     border-color: #E5E7EB;
+    font-size: 1.3rem;
+}
+
+input[type="text"]:hover,
+input[type="text"]:focus{
+    border-color: blue;
+    border-width: 2px;
+    box-shadow: 2px 2px 10px 1px lightgray;
 }
 
 #dothis{
