--- a/style.css
+++ b/style.css
@@ -105,7 +105,8 @@ label{
     
 }
 
-input[type="text"]{
+input
+{
     width: 20rem;
     height: 2rem;
     border-radius: 7px;
@@ -116,11 +117,29 @@ input[type="text"]{
     font-size: 1.3rem;
 }
 
-input[type="text"]:hover,
-input[type="text"]:focus{
+input:hover,
+input:focus{
     border-color: blue;
     border-width: 2px;
     box-shadow: 2px 2px 10px 1px lightgray;
+}
+
+input + span{
+    position: relative;
+}
+
+input:invalid{
+    border-color: red;
+    border-width: 2px;
+    box-shadow: 2px 2px 10px 1px lightgray;
+}
+
+input:invalid + span::after{
+    font-size: 1rem;
+    position: absolute;
+    content: "*required";
+    color: red;
+
 }
 
 #dothis{
